fixed fade wave issue
fixed fade wave issue while min-width 1300px, wave was overlapping title

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -857,12 +857,6 @@ footer {
     } 
 }
 
-@media (min-width: 1300px) {
-    main .fade__wave {
-         bottom: 99.7%;
-    }
-}
-
 @media (max-width: 1280px) {
     main .presentation__content--packagesCtn {
         flex-direction: column;
